scss/components/cards/_news-style-card.scss
.event-highlight-card {
    background-color: $white;
}

.event-highlight-card--icon {
    @extend .card--icon;
}


.event-highlight-card--info-wrap {
    background-color: $x-light-gray;
    padding: 10px 10px 0px;
    border: 2px solid $gray;
    margin: 0px 15px 15px;
}


.event-highlight-card--date:before {
    font-family: 'FontAwesome';
    content: "\f041";
    display: block;
    width: 20px;
    height: 20px;
    float: left;
    margin: 0 6px 0 0;
}

.event-highlight-card--date {
    font-size: 0.9em;
    font-color: $x-light-gray;
    padding: 0px 15px 0px;
    display: block;
}

.event-highlight-card--image {
    @extend .card--image;
    width: 100%;
    position: 50% 50%;
    margin-bottom: 5px;
}

.event-highlight-card--heading {
    @extend .card--heading;
}

.event-highlight-card--heading-small {

    @extend .card--heading;
    font-size: 18px;
    padding: 0px 15px 5px;
}

.event-highlight-card--subheading {
    @extend .card--subheading;
    margin-top: -.3em;
    padding: 5px 15px;
}

.event-highlight-card--text {
    @extend .card--text;
    padding: 5px 15px;
}

.event-highlight-card--cta {
    @extend .card--cta;
}

.event-highlight-card--video-container {
    @extend .embed-responsive;
    @extend .embed-responsive-16by9;

    border: 1px solid #eee;
}

.event-highlight-card--video {
    @extend .embed-responsive-item;

    padding: 10px;
    margin-bottom: 15px;
}
.event-highlight-card--location:before {
    font-family: 'FontAwesome';
    content: "\e062";
    display: block;
    width: 20px;
    height: 20px;
    float: left;
    margin: 0 6px 0 0
}

.event-highlight-card--location {
    font-size: 0.9em;
    font-color: $x-light-gray;
    padding: 0px 15px 0px;   
}

.event-highlight-card--read-more {
    display: block;
    box-sizing: border-box;
    padding: 8px 18px 10px;
    font-family: "Trade Gothic Next W01", Arial, sans-serif;
    font-weight: normal;
    font-size: inherit;
    text-decoration: none;
    cursor: pointer;
    background: #900;
    color: #fff !important;
    position: relative;

}
@media only screen and (max-width: 767px) {

    .event-highlight-card {
      margin-bottom: 20px;
  }
}

